#64744 - fix visibility on mobile

--- a/Snowdog_Components/components/Organisms/slider/_slider.scss
+++ b/Snowdog_Components/components/Organisms/slider/_slider.scss
@@ -54,6 +54,7 @@
             width: $slider__handler-max-width--brands;
             margin-left: auto;
             margin-right: auto;
+            position: relative;
 
             @include mq($screen-m) {
                 width: $slider__handler-max-width\@medium--brands;
@@ -65,6 +66,43 @@
 
             @include mq($max-content-width) {
                 width: $slider__handler-max-width\@max-width--brands;
+            }
+
+            &:before,
+            &:after {
+                display: block;
+                content: '';
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                width: 100%;
+                z-index: $z-index-low;
+
+                @include mq($slider__navigation-display-breakpoint) {
+                    display: none;
+                }
+            }
+
+            &:before {
+                background: $slider__container-before-bg;
+                right: 100%;
+            }
+
+            &:after {
+                background: $slider__container-after-bg;
+                left: 100%;
+            }
+        }
+
+        .slider__handler {
+            overflow: hidden;
+        }
+
+        .slick-list {
+            overflow: visible;
+
+            @include mq($slider__navigation-display-breakpoint) {
+                overflow: hidden;
             }
         }
     }
